--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,3 +17,11 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+buildandcommithtml:
+	make html
+	cd $(BUILDDIR)/html && \
+	git checkout gh-pages && \
+	git add . && \
+	git commit -m "rebuilt docs" && \
+	git push origin gh-pages
