--- a/horizon/cpp/tests/CMakeLists.txt
+++ b/horizon/cpp/tests/CMakeLists.txt
@@ -4,12 +4,11 @@ include(ExternalProject)
 set(PROJECTNAME tests)
 project(${PROJECTNAME})
 
-find_package(GTest REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(casadi 3.5.5 REQUIRED)
 
 # compite GTest
-find_package(GTest)
+find_package(GTest QUIET)
 if (NOT GTEST_FOUND)
     set(gTestSource "/usr/src/gtest")
     ExternalProject_Add(GTest-ext SOURCE_DIR ${gTestSource}
@@ -27,7 +26,7 @@ link_directories(${GTEST_LIB_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} )
 enable_testing()
 
-SET(TestLibs ilqr ${GTEST_LIBRARIES} pthread Eigen3::Eigen casadi)
+SET(TestLibs ilqr ${GTEST_BOTH_LIBRARIES} pthread Eigen3::Eigen casadi)
 
 
 set(HORIZON_CPP_TESTS
