--- a/horizon/cpp/tests/CMakeLists.txt
+++ b/horizon/cpp/tests/CMakeLists.txt
@@ -40,5 +40,5 @@ add_dependencies(testCasadiUtils ilqr)
 add_test(NAME testCasadiUtils COMMAND testCasadiUtils)
 
 ADD_EXECUTABLE(testQr testQr.cpp)
-TARGET_LINK_LIBRARIES(testQr ${TestLibs} lapacke)
+TARGET_LINK_LIBRARIES(testQr ${TestLibs})
 add_test(NAME testQr COMMAND testQr)
