--- a/.travis.yml
+++ b/.travis.yml
@@ -28,20 +28,22 @@ before_script:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
   - curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
   - sudo apt update && sudo apt install python3-pip python3-setuptools liburdfdom-dev cmake libeigen3-dev libboost-filesystem-dev libboost-serialization-dev libblas-dev liblapack-dev patchelf python3-venv
-  - sudo pip3 install build twine hhcm-forest==0.0.26
-  - SRC_FOLDER=$PWD
-  - cd .. && mkdir forest_ws && cd forest_ws && forest --init  # create forest ws for building
-  - ln -s $SRC_FOLDER src/$(basename $SRC_FOLDER)  # symlink original source folder
-  - forest -a git@github.com:advrhumanoids/multidof_recipes.git master -u --clone-protocol https  # get recipes
+  - sudo pip3 install build twine 
+  - SRC_DIR=$PWD
+  - BUILD_DIR=$PWD/build
+  - mkdir $BUILD_DIR
 
 script: 
-  - source setup.bash
-  - FOREST_ARGS="--default-build-type Release --clone-protocol https --verbose -j2"
-  - forest horizon $FOREST_ARGS
-  - cd build/horizon
-  - make generate_python_package
-  - cd ../../src/horizon
-  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
+  - cd $BUILD_DIR
+  - cmake -DCMAKE_BUILD_TYPE=Release ..
+  - make -j2
+  - cd $SRCDIR
+  - sudo pip3 install .
   - python3 horizon/tests/test_get_set.py
   - python3 horizon/tests/solver_lq_test.py
+  - cd $BUILD_DIR
+  - make generate_python_package
+  - cd $SRCDIR
+  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
+
 
