--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
   - curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
   - sudo apt update && sudo apt install python3-pip python3-setuptools liburdfdom-dev cmake libeigen3-dev libboost-filesystem-dev libboost-serialization-dev libblas-dev liblapack-dev patchelf python3-venv
-  - sudo pip3 install build twine hhcm_forest=0.0.26
+  - sudo pip3 install build twine hhcm_forest==0.0.26
   - SRC_DIR=$PWD
   - BUILD_DIR=$PWD/build
   - FOREST_DIR=$PWD/../forest_ws
