--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
   - cd $FOREST_DIR
   - forest --init
   - source setup.bash
-  - ln -s $SRC_FOLDER src/$(basename $SRC_FOLDER)  # symlink original source folder
+  - ln -s $SRC_DIR src/$(basename $SRC_DIR)  # symlink original source folder
   - forest -a git@github.com:advrhumanoids/multidof_recipes.git master -u --clone-protocol https  # get recipes
 
 script: 
