--- a/horizon/cpp/CMakeLists.txt
+++ b/horizon/cpp/CMakeLists.txt
@@ -70,6 +70,7 @@ add_custom_command(TARGET pysqp POST_BUILD
 add_custom_target(generate_python_package
     COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pyilqr> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
     COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pysqp> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+    COMMAND ./copy_external_dependencies.py libcasadi_conic_osqp.so -c -f -d horizon/external_libs
     COMMAND python3 -m build
     DEPENDS pysqp pyilqr
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../..
