--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,10 @@ notifications:
       - arturo.laurenzi@iit.it
       - enrico.mingo@pal-robotics.com
     on_success: never
-    on_failure: never
+    on_failure: always
+
+before_install:
+  - rm -rf /opt/pyenv
 
 before_script:
   - echo "Travis tag is $TRAVIS_TAG"
