--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ script:
   - cd $FOREST_DIR
   - forest casadi $FOREST_ARGS
   - forest pybind11 $FOREST_ARGS
+  - cd src/horizon
   - sudo pip3 install .
   - python3 horizon/tests/test_get_set.py
   - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
