trial with conda

--- a/horizon/cpp/CMakeLists.txt
+++ b/horizon/cpp/CMakeLists.txt
@@ -76,6 +76,14 @@ add_custom_target(generate_python_package
     COMMENT "Generating package ${MODULE_NAME}"
     )
 
+add_custom_target(generate_conda_package
+    COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pyilqr> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+    COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pysqp> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+    DEPENDS pysqp pyilqr
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../..
+    COMMENT "Generating package ${MODULE_NAME}"
+    )
+    
 add_custom_target(upload_python_package
     COMMAND twine upload dist/*
     DEPENDS generate_python_package
