fixing upload to pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,6 @@ script:
   - cd src/horizon
   - pip3 install .
   - python3 horizon/tests/test_get_set.py
-  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
+  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else python3 -m build --wheel && twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
 
 
