--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,5 @@ recursive-include horizon/examples *.rviz
 recursive-include horizon/examples *.urdf
 recursive-include horizon/examples *.xml
 recursive-include horizon/external_libs *
+recursive-include horizon/cpp *
+include copy_external_dependencies.py
