added docker to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ branches:
     - devel
     - /^v\d+\.\d+\.\d+.*$/  # version tags
 
+services:
+  - docker
+  
 notifications:
   email:
     recipients:
@@ -51,6 +54,19 @@ script:
   - cd src/horizon
   - pip3 install .
   - python3 horizon/tests/test_get_set.py
-  - if [ -z $TRAVIS_TAG ]; then echo "Not a tag build, will not upload to pypi"; else python3 -m build --wheel && twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl; fi
+  - if [ -z $TRAVIS_TAG ]; then 
+       echo "Not a tag build, will not upload to pypi"; 
+    else
+       # upload to pypi
+       python3 -m build --wheel
+       twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl
+       # upload to docker
+       REPO=francescoruscelli
+       cd docker && ./build
+       docker tag horizon $REPO/horizon
+       docker login --username=$REPO --password=$DOCKER_TOKEN
+       docker push $REPO/horizon;
+    
+    fi
 
 
