--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ script:
        python3 -m build --wheel
        twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl
        # upload to docker
-       cd docker && ./upload.sh
+       ./docker/upload.sh;
     
     fi
 
