--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
       python3 -m build --wheel;
       twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl;
       # upload to docker
-      sudo chmod +x upload.sh && ./docker/upload.sh;
+      sudo chmod +x docker/upload.sh && ./docker/upload.sh;
     fi
 
 
