--- a/.travis_old.yml
+++ b/.travis_old.yml
@@ -62,7 +62,8 @@ script:
       python3 -m build --wheel;
       twine upload -u __token__ -p $PYPI_TOKEN dist/*.whl;
       # upload to docker
-      sudo chmod +x docker/upload.sh && ./docker/upload.sh;
+      cd $FOREST_DIR/src/horizon/docker
+      sudo chmod +x upload.sh && .upload.sh;
     fi
 
 
