--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ branches:
 jobs:
   include:
     - stage: compile
-      script: .travis/compile.sh
+      script: ./travis/compile.sh
     - stage: test
       script: .travis/test.sh
     - stage: deploy
-      script: .travis/deploy.sh
+      script: ./travis/deploy.sh
       on:
         tags: true
 
@@ -39,4 +39,4 @@ before_install:
   - rm -rf /opt/pyenv
 
 before_script:
-  - .travis/forest.sh
+  - ./travis/forest.sh
