--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ branches:
     - devel
     # - /^v\d+\.\d+\.\d+.*$/  # version tags
 
+env:
+- SRC_DIR=$PWD
+- BUILD_DIR=$PWD/build
+- FOREST_DIR=$PWD/../forest_ws
+- HORIZON_DIR=$FOREST_DIR/src/horizon
+
 jobs:
   include:
     - stage: compile
