--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,8 @@ before_script:
 script:
 
 # required packages for building horizon
-  - FOREST_ARGS="--default-build-type Release --clone-protocol https --verbose -j2"
-  - cd $FOREST_DIR
+  # - FOREST_ARGS="--default-build-type Release --clone-protocol https --verbose -j2"
+  # - cd $FOREST_DIR
 
 # required!
   # - source setup.bash
