--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 os: linux
+dist: focal
 language: cpp
 compiler: g++
 
@@ -11,7 +12,7 @@ env:
   - DISTRIBUTION=python
   - DISTRIBUTION=conda
 
-matrix:
+jobs:
   include:
     - dist: focal
     - dist: bionic
