removed -i for try

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ branches:
 
 jobs:
   include:
-    - dist: focal
-      env: DISTRIBUTION="python"
+    # - dist: focal
+      # env: DISTRIBUTION="python"
     - dist: focal
       env: DISTRIBUTION="conda"
-    - dist: bionic
-      env: DISTRIBUTION="python"
+    # - dist: bionic
+      # env: DISTRIBUTION="python"
     - dist: bionic
       env: DISTRIBUTION="conda"
 
