--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ branches:
 
 jobs:
   include:
-    - dist: focal
-      env: DISTRIBUTION="python"
+    # - dist: focal
+      # env: DISTRIBUTION="python"
     - dist: focal
       env: DISTRIBUTION="conda"
-    - dist: bionic
-      env: DISTRIBUTION="python"
-    - dist: bionic
-      env: DISTRIBUTION="conda"
+    # - dist: bionic
+      # env: DISTRIBUTION="python"
+    # - dist: bionic
+      # env: DISTRIBUTION="conda"
 
 services:
   - docker
