changed tests for conda horizon

--- a/meta.yaml
+++ b/meta.yaml
@@ -21,22 +21,24 @@ test:
   import:
     - horizon
   requires:
-    - scipy
+    # - scipy
     - casadi
     - numpy
-    - rospkg
-    - pybind11
-    - urdfdom
-    - ros-noetic-ros-base
-    - ros-noetic-pinocchio
-    - francesco_ruscelli::casadi_kin_dyn
-    - matplotlib
+    # - rospkg
+    # - pybind11
+    # - urdfdom
+    # - ros-noetic-ros-base
+    # - ros-noetic-pinocchio
+    # - francesco_ruscelli::casadi_kin_dyn
+    # - matplotlib
     - pytest
 
   source_files:
-    - horizon/tests/test_examples.py
+    # - horizon/tests/test_examples.py
+    - horizon/tests/test_solvers.py
   commands:
-    - python3 -m pytest horizon/tests/test_examples.py
+    # - python3 -m pytest horizon/tests/test_examples.py
+    - python3 -m pytest horizon/tests/test_solvers.py
 
 about:
   home: https://github.com/ADVRHumanoids/horizon.git
