--- a/.travis.yml
+++ b/.travis.yml
@@ -7,20 +7,16 @@ branches:
     - devel
     - /^v\d+\.\d+\.\d+.*$/
 
-# env:
-#   - DISTRIBUTION="python"
-#   - DISTRIBUTION="conda"
-
 jobs:
   include:
-    # - dist: focal
-      # env: DISTRIBUTION="python"
+    - dist: focal
+      env: DISTRIBUTION="python"
     - dist: focal
       env: DISTRIBUTION="conda"
-    # - dist: bionic
-      # env: DISTRIBUTION="python"
-    # - dist: bionic
-      # env: DISTRIBUTION="conda"
+    - dist: bionic
+      env: DISTRIBUTION="python"
+    - dist: bionic
+      env: DISTRIBUTION="conda"
 
 services:
   - docker
