--- a/horizon/cpp/CMakeLists.txt
+++ b/horizon/cpp/CMakeLists.txt
@@ -66,16 +66,25 @@ add_custom_command(TARGET pysqp POST_BUILD
     COMMENT "Copying $<TARGET_FILE:pysqp> to pkg dir"
 )
 
-# python package deployment
-add_custom_target(generate_python_package
-    COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pyilqr> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
-    COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pysqp> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
-    COMMAND ./copy_external_dependencies.py libcasadi_conic_osqp.so -c -f -d horizon/external_libs
-    DEPENDS pysqp pyilqr
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../..
-    COMMENT "Generating package ${MODULE_NAME}"
+IF(NOT DEFINED ENV{CONDA_DEFAULT_ENV})
+    add_custom_target(generate_python_package
+        COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pyilqr> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+        COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pysqp> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+        COMMAND ./copy_external_dependencies.py libcasadi_conic_osqp.so -c -f -d horizon/external_libs
+        DEPENDS pysqp pyilqr
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../..
+        COMMENT "Generating package ${MODULE_NAME}"
+        )
+ELSE()
+    add_custom_target(generate_python_package
+        COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pyilqr> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+        COMMAND ./copy_external_dependencies.py $<TARGET_FILE:pysqp> -c -d horizon/external_libs --solib-dst horizon/solvers --solib-rpath ../external_libs
+        DEPENDS pysqp pyilqr
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../..
+        COMMENT "Generating package ${MODULE_NAME}"
     )
-    
+ENDIF()
+
 add_custom_target(upload_python_package
     COMMAND twine upload dist/*
     DEPENDS generate_python_package
