initial results on the biped walking

--- a/horizon/playground/coman+/config_walk.yaml
+++ b/horizon/playground/coman+/config_walk.yaml
@@ -4,26 +4,50 @@ solver:
   constr_viol_tol: 0.001
   max_iter: 2000
 
-constraints: ['foot_contact_l_foot',
-              'foot_contact_r_foot']
+constraints: ['final_base_x',
+              'foot_contact_l_sole',
+              'foot_contact_r_sole',
+              'foot_z_l_sole',
+              'foot_xy_l_sole',
+              'foot_z_r_sole',
+              'foot_xy_r_sole',
+              'rot_l_sole',
+              'rot_r_sole'
+              ]
               # 'task_base_x',
               # 'final_x',
 #               'zero_velocity_l_foot',
 #               'zero_velocity_r_foot'
 costs: [ 'joint_posture', 'joint_regularization'] # 'final_base_y', 'min_rot' # 'final_y'
 
-# todo to cartesian
-task_base_x:
-  type: 'Postural'
+final_base_x:
+  type: 'Cartesian'
+  frame: 'base_link'
   indices: [0]
   nodes: 'final'
   weight: 1000
-
+#
 final_base_y:
-  type: 'Postural'
+  type: 'Cartesian'
+  frame: 'base_link'
   indices: [1]
   nodes: 'final'
   weight: 1000
+
+rot_l_sole:
+  type: 'Cartesian'
+  frame: 'l_sole'
+  indices: [3, 4, 5]
+  nodes: 'all'
+  cartesian_type: 'velocity'
+
+rot_r_sole:
+  type: 'Cartesian'
+  frame: 'r_sole'
+  indices: [3, 4, 5]
+  nodes: 'all'
+  cartesian_type: 'velocity'
+
 # ===============================
 
 interaction_l_foot:
@@ -49,11 +73,11 @@ zero_velocity_r_foot:
   cartesian_type: 'velocity'
 # ==================================
 
-foot_contact_l_foot:
+foot_contact_l_sole:
   type: 'Contact'
   subtask: ['interaction_l_foot', 'zero_velocity_l_foot']
 
-foot_contact_r_foot:
+foot_contact_r_sole:
   type: 'Contact'
   subtask: ['interaction_r_foot', 'zero_velocity_r_foot']
 
@@ -65,25 +89,37 @@ min_rot:
 #
 joint_posture:
   type: 'Postural'
-  weight: 1.
-
-final_x:
-  type: "Postural"
-  indices: [0]
-  nodes: 'final'
-
-final_y:
-  type: "Postural"
-  indices: [1]
-  weight: 1000
-  nodes: 'final'
+  weight: 2.
 
 # todo: wrong, as the order COUNTS. If I add the contacts after the joint regularization, they won't get considered.
 joint_regularization:
   type: 'Regularization'
   nodes: 'all'
   weight:
-#    velocity: 0.01
+    velocity: 3.
     acceleration: 0.01
-    force: 0.01 # todo <----- how to do?
+    force: 0.01 # todo <----- how to do? if there are more forces...
 
+foot_z_l_sole:
+  type: 'Cartesian'
+  frame: 'l_sole'
+  indices: [2]
+  cartesian_type: 'position'
+
+foot_z_r_sole:
+  type: 'Cartesian'
+  frame: 'r_sole'
+  indices: [2]
+  cartesian_type: 'position'
+
+foot_xy_l_sole:
+  type: 'Cartesian'
+  frame: 'l_sole'
+  indices: [0, 1]
+  cartesian_type: 'position'
+
+foot_xy_r_sole:
+  type: 'Cartesian'
+  frame: 'r_sole'
+  indices: [0, 1]
+  cartesian_type: 'position'
